Updated social links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="col-md-12">
           <h1 class="display-3 mb-4 text-primary">The Fat Guy Journey</h1>
           <p class="lead mb-5">Follow along the journey of a fat guy, in his quest to find a healthier, happier, life. It will be a long journey filled with ups and downs I would appreicate your support.</p>
-          <a href="https://docs.google.com/spreadsheets/d/10QJFwtKLlKLWdwmBbl2a9uxhJm3BGV9TfZTOvHWKdtE/edit?usp=sharing" class="btn btn-lg btn-primary mx-1">The Numbers</a>
-          <a href="http://www.myfitnesspal.com/food/diary/CJSchrum" class="btn btn-lg btn-primary mx-1">The &nbsp;Food Diary</a>
+          <a href="https://docs.google.com/spreadsheets/d/10QJFwtKLlKLWdwmBbl2a9uxhJm3BGV9TfZTOvHWKdtE/edit?usp=sharing" target="_blank" class="btn btn-lg btn-primary mx-1">The Numbers</a>
+          <a href="http://www.myfitnesspal.com/food/diary/CJSchrum" target="_blank" class="btn btn-lg btn-primary mx-1">The &nbsp;Food Diary</a>
         </div>
       </div>
     </div>
@@ -43,18 +43,14 @@
   <div class="text-center bg-dark" style="background-image: url(&quot;none&quot;);">
     <div class="container-fluid">
       <div class="row">
-        <div class="py-5 col-3 col-md-4" style="background-color:#3b5998">
-          <a href="https://www.facebook.com/" target="_blank">
-            <i class="fa fa-fw fa-facebook fa-3x text-white"></i>
-          </a>
         </div>
-        <div class="py-5 col-3 col-md-4" style="background-color:#00b2ff">
-          <a href="https://twitter.com/" target="_blank">
+        <div class="py-5 col-2 col-md-4" style="background-color:#00b2ff">
+          <a href="https://twitter.com/mandatoryhtags" target="_blank">
             <i class="fa fa-fw fa-twitter fa-3x text-white"></i>
           </a>
         </div>
-        <div class="py-5 col-3 col-md-4" style="background-color:#4c68d7">
-          <a href="https://www.instagram.com/" target="_blank">
+        <div class="py-5 col-2 col-md-4" style="background-color:#4c68d7">
+          <a href="https://www.instagram.com/mandatoryhashtags/" target="_blank">
             <i class="fa fa-fw fa-instagram fa-3x text-white"></i>
           </a>
         </div>
