--- a/index.html
+++ b/index.html
@@ -50,19 +50,16 @@
         </div>
         <div class="py-5 col-2 col-md-4" style="background-color:#00b2ff">
           <a href="https://twitter.com/mandatoryhtags" target="_blank">
-        <div class="py-5 col-3 col-md-4" style="background-color:#00b2ff">
-          <a href="https://twitter.com/" target="_blank">
             <i class="fa fa-fw fa-twitter fa-3x text-white"></i>
           </a>
         </div>
         <div class="py-5 col-2 col-md-4" style="background-color:#4c68d7">
           <a href="https://www.instagram.com/mandatoryhashtags/" target="_blank">
-        <div class="py-5 col-3 col-md-4" style="background-color:#4c68d7">
-          <a href="https://www.instagram.com/" target="_blank">
             <i class="fa fa-fw fa-instagram fa-3x text-white"></i>
           </a>
         </div>
       </div>
+    </div>
     </div>
   </div>
   <div class="py-5"></div>
