Inline style changes to font and changed photo background

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://v40.pingendo.com/assets/4.0.0/default/theme.css" type="text/css"> </head>
 
 <body>
-  <div class="py-5 text-center" style="background-image: url(&quot;https://www.pexels.com/photo/black-car-on-road-near-mountains-679072/&quot;);">
-    <div class="container py-5">
+  <div class="py-5 text-center" style="background-image: url(&quot;https://images.pexels.com/photos/679072/pexels-photo-679072.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940&quot;);">
+    <div class="container py-5" style="color: aliceblue; font-weight: 600;">
       <div class="row">
         <div class="col-md-12">
           <h1 class="display-3 mb-4 text-primary">The Fat Guy Journey</h1>
