--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="display-3 mb-4 text-primary">The Fat Guy Journey</h1>
-          <p class="lead mb-5">Follow along the journey of a fat guy, in his quest to find a healthier, happier, life. It will be a long journey filled with ups and downs I would appreicate your support.</p>
+          <p class="lead mb-5">Follow along the journey of a fat guy, in his quest to find a healthier, happier, life. It will be a long journey filled with ups and downs I would appreciate your support.</p>
           <a href="https://docs.google.com/spreadsheets/d/10QJFwtKLlKLWdwmBbl2a9uxhJm3BGV9TfZTOvHWKdtE/edit?usp=sharing" target="_blank" class="btn btn-lg btn-primary mx-1">The Numbers</a>
           <a href="http://www.myfitnesspal.com/food/diary/CJSchrum" target="_blank" class="btn btn-lg btn-primary mx-1">The &nbsp;Food Diary</a>
         </div>
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="">My name Curtis Schrum, and am a Fat Guy</h1>
+          <h1 class="">My name Curtis Schrum, and I am a Fat Guy</h1>
         </div>
       </div>
     </div>
