--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="row">
         <div class="col-md-12">
           <p class="">I started this journey July 2018. I weighed 391 Pounds (177kg).
-            <br>Links below, will take you to a Google Document of the numbers and My Fitness Pal food journal.</p>
+            <br>Follow me on Social Media, I closed my FB account some time ago to focus on life</p>
         </div>
       </div>
     </div>
