--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   <div class="text-center bg-dark" style="background-image: url(&quot;none&quot;);">
     <div class="container-fluid">
       <div class="row">
-        <a href="https://twitter.com/mandatoryhtags" target="_blank">
-          <div class="py-5 col-2 col-md-6" style="background-color:#00b2ff">
+        <a class="py-5 col-2 col-md-6" style="background-color:#00b2ff" href="https://twitter.com/mandatoryhtags" target="_blank">
+          <div>
             <i class="fa fa-fw fa-twitter fa-3x text-white"></i>
           </div>
         </a>
-        <a href="https://www.instagram.com/mandatoryhashtags/" target="_blank">
-          <div class="py-5 col-2 col-md-6" style="background-color:#4c68d7">
+        <a class="py-5 col-2 col-md-6" style="background-color:#4c68d7" href="https://www.instagram.com/mandatoryhashtags/" target="_blank">
+          <div>
             <i class="fa fa-fw fa-instagram fa-3x text-white"></i>
           </div>
         </a>
